fix border spacing in table, and style table header

--- a/src/themes/default/styles/component.table.css
+++ b/src/themes/default/styles/component.table.css
@@ -4,7 +4,8 @@
 
 .table {
 	display: table;
-
+	border-spacing: 0px;
+	
 	&--primary {
 		table-layout: fixed;
 		width: 100%;
@@ -55,6 +56,10 @@
 	&__head {
 		height: calc($unit * 6);
 		background-color: $color-background;
+
+		&--data {
+            height: calc($unit * 10);
+        }
 	}
 
 	&__body {
